Updates lesson6
